# docs/swagger.yaml
@@ -86,6 +86,8 @@ definitions:
     type: object
   main.RegisterGigPayload:
     properties:
+      amount:
+        type: number
       description:
         type: string
       discipline:
@@ -98,10 +100,26 @@ definitions:
         maxLength: 100
         type: string
     required:
+    - amount
     - description
     - discipline
     - expertise
     - title
+    type: object
+  main.RegisterMeetingPayload:
+    properties:
+      amount:
+        type: number
+      date:
+        type: string
+      day:
+        type: string
+      mentorid:
+        type: integer
+      start_period:
+        type: string
+      start_time:
+        type: string
     type: object
   main.RegisterMentorPayload:
     properties:
@@ -206,6 +224,8 @@ definitions:
     type: object
   main.UpdateGigPayload:
     properties:
+      amount:
+        type: number
       description:
         type: string
       discipline:
@@ -368,6 +388,8 @@ definitions:
     type: object
   store.Gig:
     properties:
+      amount:
+        type: number
       created_at:
         type: string
       description:
@@ -383,6 +405,33 @@ definitions:
       title:
         type: string
       updated_at:
+        type: string
+      userid:
+        type: integer
+    type: object
+  store.Meetings:
+    properties:
+      amount:
+        type: number
+      date:
+        type: string
+      day:
+        type: string
+      id:
+        type: integer
+      iscompleted:
+        type: boolean
+      isconfirm:
+        type: boolean
+      ispaid:
+        type: boolean
+      link:
+        type: string
+      mentorid:
+        type: integer
+      start_period:
+        type: string
+      start_time:
         type: string
       userid:
         type: integer
@@ -1417,6 +1466,342 @@ paths:
       summary: Healthcheck
       tags:
       - health
+  /meetings:
+    get:
+      consumes:
+      - application/json
+      description: Get all meetings
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.Meetings'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Get all meetings
+      tags:
+      - meetings
+  /meetings/{meetingID}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a specific meeting
+      parameters:
+      - description: Meeting ID
+        in: path
+        name: meetingID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Delete meeting
+      tags:
+      - meetings
+  /meetings/completed/{meetingID}:
+    put:
+      consumes:
+      - application/json
+      description: Update meeting completed status to true
+      parameters:
+      - description: Meeting ID
+        in: path
+        name: meetingID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/store.Meetings'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Mark meeting as completed
+      tags:
+      - meetings
+  /meetings/confirm/{meetingID}:
+    put:
+      consumes:
+      - application/json
+      description: Update meeting confirmation status to true
+      parameters:
+      - description: Meeting ID
+        in: path
+        name: meetingID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/store.Meetings'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Confirm a meeting
+      tags:
+      - meetings
+  /meetings/create:
+    post:
+      consumes:
+      - application/json
+      description: Create a new meeting
+      parameters:
+      - description: Meeting
+        in: body
+        name: meeting
+        required: true
+        schema:
+          $ref: '#/definitions/main.RegisterMeetingPayload'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/store.Meetings'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Create a new meeting
+      tags:
+      - meetings
+  /meetings/mentor-not-confirm/{mentorID}:
+    get:
+      consumes:
+      - application/json
+      description: Get meetings where isconfirm is false for a specific mentor
+      parameters:
+      - description: Mentor ID
+        in: path
+        name: mentorID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.Meetings'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Get unconfirmed meetings by mentor ID
+      tags:
+      - meetings
+  /meetings/paid/{meetingID}:
+    put:
+      consumes:
+      - application/json
+      description: Update meeting paid status to true
+      parameters:
+      - description: Meeting ID
+        in: path
+        name: meetingID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/store.Meetings'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "404":
+          description: Not Found
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Mark meeting as paid
+      tags:
+      - meetings
+  /meetings/u/{userID}:
+    get:
+      consumes:
+      - application/json
+      description: Get meetings for a specific user
+      parameters:
+      - description: User ID
+        in: path
+        name: userID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.Meetings'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Get meetings by user ID
+      tags:
+      - meetings
+  /meetings/user-not-completed/{userID}:
+    get:
+      consumes:
+      - application/json
+      description: Get meetings where iscompleted is false but confirmed and paid
+        for a specific user
+      parameters:
+      - description: User ID
+        in: path
+        name: userID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.Meetings'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Get uncompleted meetings by user ID
+      tags:
+      - meetings
+  /meetings/user-not-paid/{userID}:
+    get:
+      consumes:
+      - application/json
+      description: Get meetings where ispaid is false for a specific user
+      parameters:
+      - description: User ID
+        in: path
+        name: userID
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/store.Meetings'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - ApiKeyAuth: []
+      summary: Get unpaid meetings by user ID
+      tags:
+      - meetings
   /mentors:
     get:
       consumes:
